k8s/papra/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papra
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: papra
  template:
    metadata:
      labels:
        app: papra
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: papra
          image: ghcr.io/papra-hq/papra:latest@sha256:bf4a66e776d0a40d71543747a2e17af800204b4a81d19f7951b8552c8032dbeb
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1221
              protocol: TCP
          volumeMounts:
            - name: papra-volume
              mountPath: /papra
      volumes:
        - name: papra-volume
          persistentVolumeClaim:
            claimName: papra-pvc
