k8s/papra/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papra
spec:
  selector:
    app: papra
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 1221
  type: ClusterIP
